<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageBandera"
        android:layout_width="135dp"
        android:layout_height="125dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/capital"
            android:textColor="@color/black"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/textCapital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="@string/nombre_pais" />

        <TextView
            android:id="@+id/textPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textCapital"
            android:layout_toRightOf="@id/textView2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="@string/nombre_internacional" />

        <TextView
            android:id="@+id/textInternacional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textPais"
            android:layout_toRightOf="@id/textView3"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="@string/sigla" />

        <TextView
            android:id="@+id/textSigla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInternacional"
            android:layout_toRightOf="@id/textView4"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:text="" />
    </RelativeLayout>


</LinearLayout>